--- a/css/styles.css
+++ b/css/styles.css
@@ -16,26 +16,37 @@ body{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.flexbox-container{
+.flexbox-container1{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    border: 1px solid black;
+    justify-content: space-around;
     margin: 20px;
 }
 
 .flexbox-container-item1{
-    width: 65%;
+    width: 800px;
     margin: 10px;
-    border: 1px solid black;
     background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px gray;
 }
 
 .flexbox-container-item2{
-    width: 30%;
+    width: 300px;
     margin: 10px;
-    border: 1px solid black;
     background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px gray;
+    
+}
+
+.flexbox-container-item3{
+    width: 800px;
+    margin: 10px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px gray;
 }
 
 .spanOpacityHalf{
@@ -68,8 +79,9 @@ body{
     background-color: white;
     color: black;
     border: 1px solid black;
+    border-radius: 10px;
 }
 
 .btn1:hover{
-    background-color:lightgray;
+    background-color:#f1f1f1;
 }
