--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,6 @@
 body{
     background-color: #f1f1f1;
-}
-
-.flexbox-header{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-}
-
-.flexbox-header-item{
-    margin: 10px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.flexbox-containerMain{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin: 20px;
-}
-
-.flexbox-containerBlogPosts{
-    flex-wrap: wrap;
-}
-
-.flexbox-container-BlogItems{
-    width: 900px;
-    height: 400px;
-    margin: 10px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px gray;;
-}
-
-.flexbox-containerSmall{
-    flex-wrap: wrap;
-}
-
-.flexbox-container-SmallItem{
-    width: 300px;
-    height: 200px;
-    margin: 10px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px gray;
 }
 
 .spanOpacityHalf{
@@ -63,6 +16,20 @@ body{
     color: white;
     text-align: center;
     display: inline-block;
+}
+
+.commentBlog{
+    outline: none;
+    resize: none;
+}
+
+input{
+    outline: none;
+}
+
+.blogImg{
+    width: 300px;
+    height: 200px;
 }
 
 .btn{
@@ -81,6 +48,7 @@ body{
     color: black;
     border: 1px solid black;
     border-radius: 10px;
+    box-shadow: 5px 5px 5px gray;
 }
 
 .btn1:hover{
