--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,48 @@
+/* Change default font size */
+html{
+    font-size: 8px;
+}
+
 /* Set background color and font-family for the body element */
 body{
     background-color: #f1f1f1;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 20px;
+    margin: 10px 100px;
+    font-size: 2rem;
+}
+
+.headerText{
+    color: white;
+    text-align: center;
+    text-shadow: 2px 2px black;
+    font-size: 1.2em;
+    background-color: darkslateblue;
+    border: 1px solid black;
+    padding: 30px;
+    margin: 50px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px gray;
+}
+
+.headerBackground{
+    background-color: #004B87;
+    color: #FFCD00;
+}
+
+.backgroundSpace{
+    background: #f1f1f1 url("/img/space.jpg") no-repeat fixed top left/cover;
+}
+
+.backgroundComet{
+    background: darkslateblue url("/img/comet.jpg") no-repeat scroll center/cover;
+}
+
+.sectionBackgroundColor{
+    background-color: #f1f1f1;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 30px;
 }
 
 /* Set Border around all Tables, Table-Headers, and Table- cells and remove double border */
@@ -52,7 +93,7 @@ input{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 2rem;
     cursor: pointer;
 }
 
@@ -69,4 +110,26 @@ input{
 /* Change hover color */
 .btn1:hover{
     background-color:#f1f1f1;
+}
+
+.textParent1{
+    font-size: 10px;
+}
+
+.textChild1{
+    font-size: 2em;
+    margin: 1.5em;
+    padding: 1em;
+}
+
+.textChildREM1{
+    font-size: 2rem;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.textChildREM2{
+    font-size: 3rem;
+    margin: 2rem;
+    padding: 2rem;
 }
